--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Vociy by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script type="text/javascript" src="https://stage-api.nocodewidget.com/scripts?userId=65c794d6-6959-4387-952b-f76929b0ce0e" id="voicl-script" defer></script>
 	</head>
 	<body class="is-preload">
 
