--- a/1/sign-up.html
+++ b/1/sign-up.html
@@ -31,6 +31,9 @@
 	
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+    <script type="text/javascript" src="https://stage-api.nocodewidget.com/scripts?userId=65c794d6-6959-4387-952b-f76929b0ce0e" id="voicl-script" defer></script>
+
+
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
