--- a/2/index.html
+++ b/2/index.html
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="assets/css/LineIcons.2.0.css">
 		<link rel="stylesheet" href="assets/css/animate.css">
 		<link rel="stylesheet" href="assets/css/main.css">
+
+        <script type="text/javascript" src="https://stage-api.nocodewidget.com/scripts?userId=65c794d6-6959-4387-952b-f76929b0ce0e" id="voicl-script" defer></script>
+
+
     </head>
     <body>
         <!--[if lte IE 9]>
