--- a/1/log-in.html
+++ b/1/log-in.html
@@ -30,6 +30,9 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
+    <script type="text/javascript" src="https://stage-api.nocodewidget.com/scripts?userId=65c794d6-6959-4387-952b-f76929b0ce0e" id="voicl-script" defer></script>
+
+
     <link rel="icon" href="images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
