--- a/1/sign-up.html
+++ b/1/sign-up.html
@@ -142,10 +142,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="footer-col first">
+
+                    <aside class="footer-col first">
                         <h6>About Blink</h6>
                         <p class="p-small">Blink is a SaaS app website Bootstrap HTML template designed to help you create a beautiful and efficient online presentation for your web application</p>
-                    </div> <!-- end of footer-col -->
+                    </aside> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h6>Links</h6>
                         <ul class="list-unstyled li-space-lg p-small">
