--- a/1/sign-up.html
+++ b/1/sign-up.html
@@ -147,14 +147,14 @@
                         <h6>About Blink</h6>
                         <p class="p-small">Blink is a SaaS app website Bootstrap HTML template designed to help you create a beautiful and efficient online presentation for your web application</p>
                     </aside> <!-- end of footer-col -->
-                    <div class="footer-col second">
+                    <section class="footer-col second">
                         <h6>Links</h6>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li>Important: <a href="terms.html">Terms & Conditions</a>, <a href="privacy.html">Privacy Policy</a></li>
                             <li>Useful: <a href="#">Colorpicker</a>, <a href="#">Icon Library</a>, <a href="#">Illustrations</a></li>
                             <li>Menu: <a class="page-scroll" href="#header">Home</a>, <a class="page-scroll" href="#features">Features</a>, <a class="page-scroll" href="#details">Details</a>, <a class="page-scroll" href="#pricing">Pricing</a></li>
                         </ul>
-                    </div> <!-- end of footer-col -->
+                    </section> <!-- end of footer-col -->
                     <div class="footer-col third">
                         <span class="fa-stack">
                             <a href="#your-link">
