--- a/1/privacy.html
+++ b/1/privacy.html
@@ -31,6 +31,7 @@
 	
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+	<script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
