--- a/1/index.html
+++ b/1/index.html
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
-                        <h1 class="h1-large">Now is the time to start selling things online </h1>
+                        <h1 class="h1-large">Hi Campsite</h1>
                         <p class="p-large">Kora is a leading online shop creation platform which offers amazing features for ecommerce</p>
                         <a class="btn-solid-lg" href="sign-up.html">Sign up for free</a>
                         <a class="btn-outline-lg page-scroll" href="#intro">Discover</a>
