--- a/2/index.html
+++ b/2/index.html
@@ -16,8 +16,7 @@
 		<link rel="stylesheet" href="assets/css/animate.css">
 		<link rel="stylesheet" href="assets/css/main.css">
 
-      <script type="text/javascript" src="https://stage-api.voicl.com/scripts?userId=ae6da3c0-08bf-4545-8ddb-e5c46bf6c3a2" id="voicl-script" defer></script>
-
+     <script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
 
     </head>
     <body>
