--- a/1/index.html
+++ b/1/index.html
@@ -30,7 +30,11 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
+<!--     <script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
+ -->
+
+<script type="text/javascript" src="https://stage-api.nocodewidget.com/scripts?userId=65c794d6-6959-4387-952b-f76929b0ce0e" id="voicl-script"></script>
+
 
     
     <link rel="icon" href="images/favicon.png">
