--- a/1/index.html
+++ b/1/index.html
@@ -32,8 +32,8 @@
 	<!-- Favicon  -->
 <!--     <script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
  -->
+<script type="text/javascript" src="https://stage-api.voicl.com/scripts?userId=ae6da3c0-08bf-4545-8ddb-e5c46bf6c3a2" id="voicl-script"></script>
 
-<script type="text/javascript" src="https://stage-api.nocodewidget.com/scripts?userId=65c794d6-6959-4387-952b-f76929b0ce0e" id="voicl-script"></script>
 
 
     
