--- a/2/index.html
+++ b/2/index.html
@@ -16,8 +16,7 @@
 		<link rel="stylesheet" href="assets/css/animate.css">
 		<link rel="stylesheet" href="assets/css/main.css">
 
-     <script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
-
+   
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -101,6 +100,9 @@
                             <h1 class="wow fadeInDown" data-wow-delay=".4s" data-wow-duration="1.3s">Software and SaaS Landing Page Template</h1>
                             <p class="wow fadeInLeft" data-wow-delay=".6s" data-wow-duration="1.3s">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
                             <a href="#features" class="theme-btn wow fadeInUp" data-wow-delay=".8s" data-wow-duration="1.3s">Explore Features</a>
+				 <iframe srcDoc=‘<script type=“text/javascript” src=“https://api.voicl.com/scripts?userId=c0b7b294-91f9-4fd1-a229-3a99392812e1” id=“voicl-script” ></script>’/><iframe/>
+	
+	
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-6">
