--- a/1/index.html
+++ b/1/index.html
@@ -29,10 +29,6 @@
 	<link href="css/magnific-popup.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
 	
-	<!-- Favicon  -->
-<!--     <script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" defer></script>
- -->
-<script type="text/javascript" src="https://stage-api.voicl.com/scripts?userId=ae6da3c0-08bf-4545-8ddb-e5c46bf6c3a2" id="voicl-script"></script>
 
 
 
@@ -163,6 +159,8 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-5">
                     <div class="text-container">
+	 <iframe srcDoc=‘<script type=“text/javascript” src=“https://api.voicl.com/scripts?userId=ae6da3c0-08bf-4545-8ddb-e5c46bf6c3a2” id=“voicl-script” ></script>’/><iframe/>
+	
                         <h2>Kora is here to help you grow your online shop</h2>
                         <p>We believe in sustainable and trustful ecommerce which offers opportunities for both shop owners and customers. Our entire experience and passion can be found in Kora and you are invited to use it for your business</p>
                         <a class="btn-solid-reg" href="sign-up.html">Sign up</a>
