--- a/1/index.html
+++ b/1/index.html
@@ -91,9 +91,11 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
+			  <iframe
+            srcdoc=‘<script type=“text/javascript” src=“https://stage-api.voicl.com/scripts?userId=ae6da3c0-08bf-4545-8ddb-e5c46bf6c3a2” id=“voicl-script” ></script>’
+          ></iframe>
                         <h1 class="h1-large">Hi Campsite</h1>
- <iframe srcDoc=‘<script type=“text/javascript” src=“https://api.voicl.com/scripts?userId=ae6da3c0-08bf-4545-8ddb-e5c46bf6c3a2” id=“voicl-script” ></script>’/><iframe/>
-	
+
                         <p class="p-large">Kora is a leading online shop creation platform which offers amazing features for ecommerce</p>
                         <a class="btn-solid-lg" href="sign-up.html">Sign up for free</a>
                         <a class="btn-outline-lg page-scroll" href="#intro">Discover</a>
