--- a/1/index.html
+++ b/1/index.html
@@ -17,8 +17,7 @@
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
-	<script type="text/javascript" src="https://api.voicl.com/scripts?userId=86ee3ee2-3ac2-466b-a536-72f9e6d22cb5" id="voicl-script" ></script>
-
+<script type="text/javascript" src="https://script.voicl.com/bundle.js?userId=80911304-1ae4-4cac-9879-d0b4a114b951" id="voicl-script" ></script>
 
 
 	
